--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -26,3 +26,14 @@ thead th {
 .list_line_odd {
   	background: #FEFEFA;
 }
+.comment-body{
+  width: 50%;
+  height: 200px;
+}
+.commenter{
+  width: 50%;
+}
+
+field{
+  width: 50%;
+}
