--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Articles</h1>
+<h1>Flauta's blog & forum</h1>
 
 <table>
   <thead>
@@ -15,7 +15,7 @@
   <tbody>
     <% @articles.each do |article| %>
       <tr class="<%= cycle('list_line_odd', 'list_line_even') %>">
-        <td><%= article.title %></td>
+        <td><%= link_to article.title, article %></td>
         <td><%= article.post %></td>
         <td><%= article.user_id %></td>
         <td><%= link_to 'Show', article %></td>
