--- a/app/views/flauta/index.html.erb
+++ b/app/views/flauta/index.html.erb
@@ -14,7 +14,8 @@
    <span class="image30"><%= image_tag("flauta1.jpg") %></span>
    <span class="box2">
      U ontvang uw besteling binnen 24 uur.
-     <a class="koop" href="./blog">Blog</a>
+     <!-- <a class="koop" href="./blog">Blog</a> -->
+      <%= link_to "Blog", articles_path, class: "koop" %>
    </span>
    <span class="image30"><%= image_tag("people2.jpg") %></span>
 
@@ -26,21 +27,21 @@
        <span class="image30">
          <p><b>Quinua white</b></p>
          <%= image_tag("quinua white.jpg") %>
-         <p><a class="koop" href="./shop">Ga naar de webshop</a></p>
+          <p><%= link_to "Ga naar de webshop", new_order_path, class: "koop" %></p>
        </span>
      </span>
      <span class="beste3">
        <span class="image30">
           <p><b>Causa met quinua</b></p>
          <%= image_tag("eten4.jpg") %>
-         <p><a class="koop" href="./shop">Ga naar de webshop</a></p>
+         <p><%= link_to "Ga naar de webshop", new_order_path, class: "koop" %></p>
        </span>
      </span>
      <span class="beste3">
        <span class="image30">
          <p><b>Dulce met quinua</b></p>
          <%= image_tag("eten8.jpg") %>
-         <p><a class="koop" href="./shop">Ga naar de webshop</a></p>
+         <p><%= link_to "Ga naar de webshop", new_order_path, class: "koop" %></p>
        </span>
      </span>
  </div>
