--- a/app/assets/stylesheets/flauta.scss
+++ b/app/assets/stylesheets/flauta.scss
@@ -1,3 +1,55 @@
 // Place all the styles related to the Flauta controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.box1 {
+  margin: 0px;
+/*  background-color: #f0f0f0;*/
+}
+
+.box1 img {
+  height: 250px;
+  width: 100%;
+  margin: 0px;
+  padding:0px;
+}
+
+span.box2 {
+  height:140px;
+  width:100px;
+  padding:10px;
+}
+
+h1.title {
+  text-align: center;
+  // font: arial;
+  font-family: "Times New Roman", Times, serif;
+}
+
+.inhoud {
+   padding:10px;
+   border: 50px;
+}
+span.image10 img{
+  height:70px;
+  width:100px;
+}
+span.image30 img{
+  height:140px;
+  width:200px;
+}
+span.beste3 {
+  display:inline-block;
+  padding:10px;
+}
+
+a.koop {
+  color: white;
+  border-radius: 10px;
+/*  background-color: #aaaaaa ;*/
+  background-color: #ff9933 ;
+  text-decoration: none;
+  padding: 5px 10px;
+  transition: all 0.5s;
+  display: inline-block;
+}
