--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,9 +1,11 @@
 body {
-  background-color: #fff;
+  background-color: #ffffcc;
   color: #333;
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
+  padding: 0;
+  margin: 0;
 }
 
 p, ol, ul, td {
@@ -19,7 +21,7 @@ pre {
 }
 
 a {
-  color: #000;
+    color: #000;
 
   &:visited {
     color: #666;
