--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -30,13 +30,13 @@
 
 <h2>Add a comment:</h2>
 <%= form_for([@article, @article.comments.build]) do |f| %>
-  <p>
+  <div class="form-group">
     <%= f.label :commenter %><br>
-    <%= f.text_field :commenter, :class => 'commenter' %>
-  </p>
+    <%= f.text_field :commenter, :class => 'commenter form-control' %>
+  </div>
   <p>
     <%= f.label :body %><br>
-    <%= f.text_area :body, :class => 'comment-body' %>
+    <%= f.text_area :body, :class => 'comment-body form-control' %>
   </p>
   <p>
     <%= f.submit %>
