--- a/app/views/flauta/index.html.erb
+++ b/app/views/flauta/index.html.erb
@@ -2,10 +2,9 @@
 
 <div class="box1">
   <%= image_tag("peru2.jpg") %>
-  <!-- <h1 class="title">Flauta</h1> -->
 </div>
 
-<h1 class="title">Flauta</h1>
+<div class="bgimage"><h1 class="title">Flauta</h1></div>
 <div class="inhoud">
   <!-- <span class="info"> -->
     <p>Welkom bij Flauta, hier kunt u het beste producten
