--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,9 +31,9 @@
       </div>
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Home</a></li>
-          <li><a href="./articles">Blog</a></li>
-          <li><a href="./orders">Shop</a></li>
+          <li class="active"><a href="flauta">Home</a></li>
+          <li><a href="articles">Blog</a></li>
+          <li><a href="orders">Shop</a></li>
         </ul>
       </div>
     </div>
