--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,13 +27,13 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <%= link_to "Flauta", "flauta", class: "navbar-brand" %>
+        <%= link_to "Flauta", "../flauta", class: "navbar-brand" %>
       </div>
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="flauta">Home</a></li>
-          <li><a href="articles">Blog</a></li>
-          <li><a href="orders">Shop</a></li>
+          <li class="active"><a href="../flauta">Home</a></li>
+          <li><a href="../articles">Blog</a></li>
+          <li><a href="../orders/new">Shop</a></li>
         </ul>
       </div>
     </div>
