--- a/app/views/flauta/index.html.erb
+++ b/app/views/flauta/index.html.erb
@@ -19,7 +19,7 @@
 
  <div>
    <p>
-   De beste verkopen producten van deze maand zijn:
+   De beste verkochte producten van deze maand zijn:
   </p>
      <span class="beste3">
        <span class="image30">
