--- a/app/assets/stylesheets/orders.scss
+++ b/app/assets/stylesheets/orders.scss
@@ -1,3 +1,20 @@
 // Place all the styles related to the Orders controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.image img {
+  width: 200px;
+  margin: 0px;
+  padding:0px;
+}
+
+.name {
+   font-size: 210%;
+}
+
+.price {
+   font-size: 210%;
+}
+
+.description {
+   font-size: 210%;
+}
