--- a/app/views/flauta/index.html.erb
+++ b/app/views/flauta/index.html.erb
@@ -15,13 +15,17 @@
    <hr class="tussenlijn"></hr>
    <span class="image30">
      <p>Deze biologische producten komen uit de bergen van Peru.
-     Na uw bestelling ontvangt u de producten binnen 24 uur.</p>
+     </p>
     <p> Quinoa is geen graan, maar zaad. Het wordt al eeuwenlang geteeld
     op de koude, droge, winderige hoogvlakten van Peru.
     Quinoa bevat vrij veel eiwit: ruim 16 procent, bijna dubbel
-    zoveel als tarwe en zilvervliesrijst.</p>
-    <p>Wij bieden ook veel recepten met quinoa zodat je kan ook thuis koken.
+    zoveel als tarwe en zilvervliesrijst.
+    Quinoa is prima afwisseling voor rijst, pasta of muesli. </p>
+    <p>Wij hebben drie soorten quinoa: zwart,witte en rood.
+      Bovendien bieden wij ook veel recepten waarmee mensen
+      quinoa kan gebruiken.
     </p>
+      <p>Na uw bestelling ontvangt u de producten binnen 24 uur.</p>
    </span>
 </div>
  <div>
