--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,13 +1,11 @@
 body {
   background-color: #ffffcc;
   color: #333;
-  font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
 }
 
 p, ol, ul, td {
-  font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
 }
@@ -26,8 +24,7 @@ a {
   }
 
   &:hover {
-    color: #fff;
-    background-color: #000;
+    color: blue;
   }
 }
 
