--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -7,20 +7,20 @@
     <tr>
       <th>Title</th>
       <th>Post</th>
-      <th>User</th>
-      <th colspan="3"></th>
+      <!-- <th>User</th> -->
+      <!-- <th colspan="3"></th> -->
     </tr>
   </thead>
 
   <tbody>
     <% @articles.each do |article| %>
       <tr class="<%= cycle('list_line_odd', 'list_line_even') %>">
-        <td><%= link_to article.title, article %></td>
-        <td><%= article.post %></td>
-        <td><%= article.user_id %></td>
+        <td class="title"><%= link_to article.title, article %></td>
+        <td class="text"><%= truncate(article.post, :length => 150, :omission => "... (klik om verder te lezen)") %></td>
+        <!-- <td><%= article.user_id %></td>
         <td><%= link_to 'Show', article %></td>
         <td><%= link_to 'Edit', edit_article_path(article) %></td>
-        <td><%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' } %></td> -->
       </tr>
     <% end %>
   </tbody>
@@ -28,4 +28,4 @@
 
 <br>
 
-<%= link_to 'New Article', new_article_path %>
+<!-- <%= link_to 'New Article', new_article_path %> -->
