--- a/app/assets/stylesheets/flauta.scss
+++ b/app/assets/stylesheets/flauta.scss
@@ -25,13 +25,13 @@ span.box2 {
 
 h1.title {
   text-align: center;
-  // font: arial;
   font-family: "Times New Roman", Times, serif;
 }
 
 .inhoud {
    padding:10px;
    border: 50px;
+   text-align: center;
 }
 span.image10 img{
   height:70px;
