--- a/app/views/flauta/index.html.erb
+++ b/app/views/flauta/index.html.erb
@@ -3,17 +3,14 @@
 <div class="box1">
   <%= image_tag("peru2.jpg") %>
 </div>
-
 <div class="bgimage"><h1 class="title">Flauta</h1></div>
 <div class="inhoud">
-  <!-- <span class="info"> -->
     <p>Welkom bij Flauta, hier kunt u het beste producten
        en recepten van Peru vinden.</p>
-   <!-- </span> -->
    <span class="image30"><%= image_tag("flauta1.jpg") %></span>
    <span class="image30"><%= image_tag("people2.jpg") %></span>
+</div>
    <hr class="tussenlijn"></hr>
-   <span class="image30">
      <p>Deze biologische producten komen uit de bergen van Peru.
      </p>
     <p> Quinoa is geen graan, maar zaad. Het wordt al eeuwenlang geteeld
@@ -26,8 +23,7 @@
       quinoa kan gebruiken.
     </p>
       <p>Na uw bestelling ontvangt u de producten binnen 24 uur.</p>
-   </span>
-</div>
+<!-- </div> -->
  <div>
     <hr class="tussenlijn"></hr>
    <%= link_to "Blog", articles_path, class: "koop" %>
