--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -40,7 +40,7 @@
         <th>Name</th>
         <th>Price</th>
         <th>Description</th>
-        <th class="qty">Quantity to Order</th>
+        <th class="qty">Qty</th>
         <th colspan="3"></th>
       </tr>
     </thead>
