--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -31,7 +31,7 @@
 </div>
 
 <div class= "listing_field">
-    <h1>Listing Flauta</h1>
+    <h1>Flauta Shop</h1>
 
   <table>
     <thead>
@@ -40,7 +40,7 @@
         <th>Name</th>
         <th>Price</th>
         <th>Description</th>
-        <th class="qty">Qty</th>
+        <th class="qty">Quantity to Order</th>
         <th colspan="3"></th>
       </tr>
     </thead>
