--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -11,7 +11,7 @@
     </div>
   <% end %>
 
-<div class= "costumer_field">
+<div class= "field">
       <div class="field">
         <%= f.label :name %><br>
         <%= f.text_field :name %>
