--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,13 +1,11 @@
 body {
-  background-color: #ffffcc;
+  background-color: #F2FAE3;
   color: #333;
   font-size: 13px;
   line-height: 18px;
 }
 
 p, ol, ul, td {
-  font-size: 13px;
-  line-height: 18px;
 }
 
 pre {
@@ -20,7 +18,6 @@ a {
     color: #000;
 
   &:visited {
-    color: #666;
   }
 
   &:hover {
